crates/ryft-macros-tests/tests/parameters/error_unions.stderr
error: the '#[derive(ryft::Parameterized)]' macro does not support unions
 --> tests/parameters/error_unions.rs:4:7
  |
4 | union UnionWithParameters<P: Parameter> {
  |       ^^^^^^^^^^^^^^^^^^^

error: found more than one generic types bounded by 'Parameter'; to use the ryft '#[derive(Parameterized)]' macro you must bound exactly one type parameter with the 'Parameter' trait; not none and not more than one; the bound must be specified as 'Parameter' or 'ryft::Parameter' where 'ryft' must be substituted for the custom ryft 'crate' provided, if one was provided using the '#[ryft(crate = ...)]' attribute
  --> tests/parameters/error_unions.rs:10:34
   |
10 | union UnionWithMultipleParameters<P: Copy + Parameter, V: Copy + Parameter> {
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the '#[derive(ryft::Parameterized)]' macro does not support unions
  --> tests/parameters/error_unions.rs:10:7
   |
10 | union UnionWithMultipleParameters<P: Copy + Parameter, V: Copy + Parameter> {
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: found no generic types bounded by 'Parameter'; to use the ryft '#[derive(Parameterized)]' macro you must bound exactly one type parameter with the 'Parameter' trait; not none and not more than one; the bound must be specified as 'Parameter' or 'ryft::Parameter' where 'ryft' must be substituted for the custom ryft 'crate' provided, if one was provided using the '#[ryft(crate = ...)]' attribute
  --> tests/parameters/error_unions.rs:16:7
   |
16 | union UnionWithoutParameters<P: Copy, V: Copy> {
   |       ^^^^^^^^^^^^^^^^^^^^^^

error: the '#[derive(ryft::Parameterized)]' macro does not support unions
  --> tests/parameters/error_unions.rs:16:7
   |
16 | union UnionWithoutParameters<P: Copy, V: Copy> {
   |       ^^^^^^^^^^^^^^^^^^^^^^

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
 --> tests/parameters/error_unions.rs:5:5
  |
5 |     i: P,
  |     ^^^^
  |
  = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
  |
5 |     i: std::mem::ManuallyDrop<P>,
  |        +++++++++++++++++++++++ +
